--- a/bloodRecord.tex
+++ b/bloodRecord.tex
@@ -547,13 +547,13 @@
 					Under aseptic precautions, prick the finger. Discard the first drop of blood. Place the slide on the table and support with left hand. Place the blood drop on the right end, one cm away from the edge. Place the spreader slide just infront of the blood drop. Draw the spreader slide backwards to touch the drop. The blood spreads across the edge of the spreader. Draw the spreader slide forward at an angle of 45$^{\circ}$ with a smooth, fast and firm movement to make a thin tongue shaped blood smear. Too thick, thin or a patchy smear is to be avoided. Air dry the smear quickly.
 
 					\section*{Result}
-					The differential count of WBCs in the blood sample is as follows.\newline
-					Neutrophil = $\rule{5cm}{0.1cm}$ \%\newline
-					Eosinophil = $\rule{5cm}{0.1cm}$ \%\newline
-					Basophil = $\rule{5cm}{0.1cm}$ \%\newline
-					Lymphocyte = $\rule{5cm}{0.1cm}$ \%\newline
-					Monocyte =$\rule{5cm}{0.1cm}$ \%\newline
-
+					The differential count of WBCs in the blood sample is as follows.\newline\vspace{.5cm}
+					Neutrophil = $\rule{5cm}{0.1cm}$ \%\newline\vspace{.5cm}
+					Eosinophil = $\rule{5cm}{0.1cm}$ \%\newline\vspace{.5cm}
+					Basophil = $\rule{5cm}{0.1cm}$ \%\newline\vspace{.5cm}
+					Lymphocyte = $\rule{5cm}{0.1cm}$ \%\newline\vspace{.5cm}
+					Monocyte =$\rule{5cm}{0.1cm}$ \%
+					
 					\section*{Questions}
 					\begin{enumerate}
 						\item{Draw the different WBCs using appropriate colours.}
@@ -564,11 +564,11 @@
 						\item{Mention the clinical importance of peripheral blood smear.}
 					\end{enumerate}
 
+					\newpage
 
 					\section*{Identifcation Of The Cells}
 					A leukocyte is identified by its size, nucleus, cytoplasm and granules.
-
-					\begin{tabularx}{\textwidth}{*{5}{m{.2\textwidth}|X|}}
+					\begin{tabularx}{\textwidth}{|*{5}{m{.2\textwidth}|X|}}
 %{|c|c|X|X|c|}
 						\hline
 						\textbf{Cell type}&
