Hb, bloodgrouping, bleeding Time

--- a/bloodRecord.tex
+++ b/bloodRecord.tex
@@ -514,201 +514,319 @@
 
 					\section*{Procedure}
 
-	\addfig{%
-		\begin{figure}[h]
-			\centering
-			\includegraphics[scale=.50]{./smear1.jpg}
-			\label{smear1}
-			\vspace{3cm}
-			\includegraphics[scale=.50]{./smear2.jpg}
-			\label{smear2}
-			\vspace{1cm}
-			\includegraphics[scale=.50]{./smear3.jpg}
-			\label{smear3}
-		\end{figure}
-		}
-					Under aseptic precautions, prick the finger. Discard the first drop of blood. Place the slide on the table and support with left hand. Place the blood drop on the right end, one cm away from the edge. Place the spreader slide just infront of the blood drop. Draw the spreader slide backwards to touch the drop. The blood spreads across the edge of the spreader. Draw the spreader slide forward at an angle of 45$^{\circ}$ with a smooth, fast and firm movement to make a thin tongue shaped blood smear. Too thick, thin or a patchy smear is to be avoided. Air dry the smear quickly.
+					\addfig{%
+						\begin{figure}[h]
+							\centering
+							\includegraphics[scale=.50]{./smear1.jpg}
+							\label{smear1}
+							\vspace{3cm}
+							\includegraphics[scale=.50]{./smear2.jpg}
+							\label{smear2}
+							\vspace{1cm}
+							\includegraphics[scale=.50]{./smear3.jpg}
+							\label{smear3}
+						\end{figure}
+						}
+						Under aseptic precautions, prick the finger. Discard the first drop of blood. Place the slide on the table and support with left hand. Place the blood drop on the right end, one cm away from the edge. Place the spreader slide just infront of the blood drop. Draw the spreader slide backwards to touch the drop. The blood spreads across the edge of the spreader. Draw the spreader slide forward at an angle of 45$^{\circ}$ with a smooth, fast and firm movement to make a thin tongue shaped blood smear. Too thick, thin or a patchy smear is to be avoided. Air dry the smear quickly.
 
-					Place the glass slide with the smear on a tray and add Leishman’s stain, drop by drop till the entire smear is covered with the stain. Count the number of drops added. Note the time and wait for 2 minutes (Fixation time). After 2 minutes, add double the quantity of distilled water over the film using a dropper. See to that the distilled water uniformly covers the entire surface of the slide and dilutes the stain homogenously. Gently blow the stain and the distilled water from one end of the slide to the other for uniform mixing. Wait for about 8-10 minutes for the smear to take up the stain uniformly (Staining time).
-					Flush the slide under a gentle stream of tap water to remove the excess stain. Dry the slide. Scan the film under low \& high power objective. Make necessary microscopic adjustments for oil immersion objective (100X). Add a drop of cedar wood oil over the smear at the junction between the body and the tail, as the smear will be of one cell thickness with uniform staining here. Cedar wood oil has the same refractive index as that of glass and minimizes refraction. Examine in a zig-zag manner as shown in the figure.
+						Place the glass slide with the smear on a tray and add Leishman’s stain, drop by drop till the entire smear is covered with the stain. Count the number of drops added. Note the time and wait for 2 minutes (Fixation time). After 2 minutes, add double the quantity of distilled water over the film using a dropper. See to that the distilled water uniformly covers the entire surface of the slide and dilutes the stain homogenously. Gently blow the stain and the distilled water from one end of the slide to the other for uniform mixing. Wait for about 8-10 minutes for the smear to take up the stain uniformly (Staining time).
+						Flush the slide under a gentle stream of tap water to remove the excess stain. Dry the slide. Scan the film under low \& high power objective. Make necessary microscopic adjustments for oil immersion objective (100X). Add a drop of cedar wood oil over the smear at the junction between the body and the tail, as the smear will be of one cell thickness with uniform staining here. Cedar wood oil has the same refractive index as that of glass and minimizes refraction. Examine in a zig-zag manner as shown in the figure.
 
-					Draw a table with 100 squares to count 100 WBCs and enter the type of cell as identified while examining the film.
+						Draw a table with 100 squares to count 100 WBCs and enter the type of cell as identified while examining the film.
 
-	\addfig{%
-		\begin{figure}[h]
-			\centering
-			\includegraphics[scale=13]{./dc1.jpg}
-			\label{dc1}
-			\vspace{3cm}
-			\includegraphics[scale=13]{./dc2.jpg}
-			\label{dc2}
-		\end{figure}
-		}
-					Under aseptic precautions, prick the finger. Discard the first drop of blood. Place the slide on the table and support with left hand. Place the blood drop on the right end, one cm away from the edge. Place the spreader slide just infront of the blood drop. Draw the spreader slide backwards to touch the drop. The blood spreads across the edge of the spreader. Draw the spreader slide forward at an angle of 45$^{\circ}$ with a smooth, fast and firm movement to make a thin tongue shaped blood smear. Too thick, thin or a patchy smear is to be avoided. Air dry the smear quickly.
+						\addfig{%
+							\begin{figure}[h]
+								\centering
+								\includegraphics[scale=13]{./dc1.jpg}
+								\label{dc1}
+								\vspace{3cm}
+								\includegraphics[scale=13]{./dc2.jpg}
+								\label{dc2}
+							\end{figure}
+							}
+							Under aseptic precautions, prick the finger. Discard the first drop of blood. Place the slide on the table and support with left hand. Place the blood drop on the right end, one cm away from the edge. Place the spreader slide just infront of the blood drop. Draw the spreader slide backwards to touch the drop. The blood spreads across the edge of the spreader. Draw the spreader slide forward at an angle of 45$^{\circ}$ with a smooth, fast and firm movement to make a thin tongue shaped blood smear. Too thick, thin or a patchy smear is to be avoided. Air dry the smear quickly.
 
-					\section*{Result}
-					The differential count of WBCs in the blood sample is as follows.\newline\vspace{.5cm}
-					Neutrophil = $\rule{5cm}{0.1cm}$ \%\newline\vspace{.5cm}
-					Eosinophil = $\rule{5cm}{0.1cm}$ \%\newline\vspace{.5cm}
-					Basophil = $\rule{5cm}{0.1cm}$ \%\newline\vspace{.5cm}
-					Lymphocyte = $\rule{5cm}{0.1cm}$ \%\newline\vspace{.5cm}
-					Monocyte =$\rule{5cm}{0.1cm}$ \%
-					
-					\section*{Questions}
-					\begin{enumerate}
-						\item{Draw the different WBCs using appropriate colours.}
-						\item{What other cells can you visualize in the smear?}
-						\item{Enumerate the criteria of a good blood smear.}
-						\item{Can tap water be used for dilution? why?}
-						\item{Mention the functions of various types of WBCs and their abnormalities in count.}
-						\item{Mention the clinical importance of peripheral blood smear.}
-					\end{enumerate}
+							\section*{Result}
+							The differential count of WBCs in the blood sample is as follows.\newline\vspace{.5cm}
+							Neutrophil = $\rule{5cm}{0.1cm}$ \%\newline\vspace{.5cm}
+							Eosinophil = $\rule{5cm}{0.1cm}$ \%\newline\vspace{.5cm}
+							Basophil = $\rule{5cm}{0.1cm}$ \%\newline\vspace{.5cm}
+							Lymphocyte = $\rule{5cm}{0.1cm}$ \%\newline\vspace{.5cm}
+							Monocyte =$\rule{5cm}{0.1cm}$ \%
 
-					\newpage
+							\section*{Questions}
+							\begin{enumerate}
+								\item{Draw the different WBCs using appropriate colours.}
+								\item{What other cells can you visualize in the smear?}
+								\item{Enumerate the criteria of a good blood smear.}
+								\item{Can tap water be used for dilution? why?}
+								\item{Mention the functions of various types of WBCs and their abnormalities in count.}
+								\item{Mention the clinical importance of peripheral blood smear.}
+							\end{enumerate}
 
-					\section*{Identifcation Of The Cells}
-					A leukocyte is identified by its size, nucleus, cytoplasm and granules.
-					\begin{tabularx}{\textwidth}{|*{5}{m{.2\textwidth}|X|}}
-%{|c|c|X|X|c|}
-						\hline
-						\textbf{Cell type}&
-						\textbf{Size}&
-						\textbf{Nucleus}&
-						\textbf{Cytoplasm}&
-						\textbf{Normal Values}\\
+							\newpage
 
-						\hline
+							\section*{Identifcation Of The Cells}
+							A leukocyte is identified by its size, nucleus, cytoplasm and granules.
+							\\
+							\begin{center}
+								\begin{tabularx}{\textwidth}{|*{5}{m{.2\textwidth}|X|}}
+									%{|c|c|X|X|c|}
+									\hline
+									\textbf{Cell type}&
+									\textbf{Size}&
+									\textbf{Nucleus}&
+									\textbf{Cytoplasm}&
+									\textbf{Normal Values}\\
 
-						Neutrophil&
-						10 – 14 ${\mu}m$&
-						2-5 lobes connected by narrow strands of chromatin&
-						Fine violet-pink granules&
-						60-70\%\\
+									\hline
 
-						\hline
-						Eosinophil&
-						10 - 15 ${\mu}m$&
-						Often bi-lobed connected by thick strands of chromatin (spectacle shaped nucleus)&
-						Coarse brick-red to orange granules&
-						2-8\%\\
-						\hline	
+									Neutrophil&
+									10 – 14 ${\mu}m$&
+									2-5 lobes connected by narrow strands of chromatin&
+									Fine violet-pink granules&
+									60-70\%\\
 
-						Basophil&
-						10 - 15 ${\mu}m$&
-						Irregularly shaped (S shaped) nucleus masked by the granules&
-						Very coarse deep purple granules&
-						0-1\%\\
-						\hline
+									\hline
+									Eosinophil&
+									10 - 15 ${\mu}m$&
+									Often bi-lobed connected by thick strands of chromatin (spectacle shaped nucleus)&
+									Coarse brick-red to orange granules&
+									2-8\%\\
+									\hline	
 
-						Small lymphocyte&
-						7-9 ${\mu}m$&
-						Single, round, almost fills the cell Thin cresent of clear, light blue cytoplasm. &
-						No visible granules.&
-						\multirow{2}{*}{20-30\%}\\
-						\cline{1-4}
+									Basophil&
+									10 - 15 ${\mu}m$&
+									Irregularly shaped (S shaped) nucleus masked by the granules&
+									Very coarse deep purple granules&
+									0-1\%\\
+									\hline
 
-						Large lymphocyte&
-						10 - 15 ${\mu}m$&
-						Single, round, almost fills the cell.  May be central or eccentric.&
-						Large cresent of clear, light blue cytoplasm. No visible granules.&
-						\\
-						\hline
+									Small lymphocyte&
+									7-9 ${\mu}m$&
+									Single, round, almost fills the cell Thin cresent of clear, light blue cytoplasm. &
+									No visible granules.&
+									\multirow{2}{*}{20-30\%}\\
+									\cline{1-4}
 
-						Monocyte&
-						12 - 20 ${\mu}m$&
-						Horse-shoe shaped nucleus Indented&
-						Abundant, muddy blue in appearance. No visible granules.&
-						1-5\%\\
-						\hline
-					\end{tabularx}	
+									Large lymphocyte&
+									10 - 15 ${\mu}m$&
+									Single, round, almost fills the cell.  May be central or eccentric.&
+									Large cresent of clear, light blue cytoplasm. No visible granules.&
+									\\
+									\hline
 
-
-
-
-
-					\chapter*{\centering Hemoglobin Estimation}
-					\begin{tabular}{p{5in} p{1in}}
-						\textbf{Exp No:}  & \textbf{Date:}\\
-					\end{tabular}
-
-					\section*{Aim}
-					\section*{Apparatus Required}
-					\section*{Turk's Fluid Composition}
-					\section*{Procedure}
-					\section*{Calcualtion}
-					\section*{Result}
-					\section*{Questions}
-
-					\chapter*{\centering Blood Grouping \& Typing}
-					\begin{tabular}{p{5in} p{1in}}
-						\textbf{Exp No:}  & \textbf{Date:}\\
-					\end{tabular}
-
-					\section*{Aim}
-					\section*{Apparatus Required}
-					\section*{Turk's Fluid Composition}
-					\section*{Procedure}
-					\section*{Calcualtion}
-					\section*{Result}
-					\section*{Questions}
-
-					\chapter*{\centering Estimation Of Erythrocyte Sedimentation Rate}
-					\begin{tabular}{p{5in} p{1in}}
-						\textbf{Exp No:}  & \textbf{Date:}\\
-					\end{tabular}
-					\section*{Aim}
-					\section*{Apparatus Required}
-					\section*{Turk's Fluid Composition}
-					\section*{Procedure}
-					\section*{Calcualtion}
-					\section*{Result}
-					\section*{Questions}
+									Monocyte&
+									12 - 20 ${\mu}m$&
+									Horse-shoe shaped nucleus Indented&
+									Abundant, muddy blue in appearance. No visible granules.&
+									1-5\%\\
+									\hline
+								\end{tabularx}	
+							\end{center}
 
 
-					\chapter*{\centering Packed Cell Volume}
-					\begin{tabular}{p{5in} p{1in}}
-						\textbf{Exp No:}  & \textbf{Date:}\\
-					\end{tabular}
-					\section*{Aim}
-					\section*{Apparatus Required}
-					\section*{Turk's Fluid Composition}
-					\section*{Procedure}
-					\section*{Calcualtion}
-					\section*{Result}
-					\section*{Questions}
 
 
-					\chapter*{\centering Osmotic Fragility}
-					\begin{tabular}{p{5in} p{1in}}
-						\textbf{Exp No:}  & \textbf{Date:}\\
-					\end{tabular}
 
-					\section*{Aim}
-					\section*{Apparatus Required}
-					\section*{Turk's Fluid Composition}
-					\section*{Procedure}
-					\section*{Calcualtion}
-					\section*{Result}
-					\section*{Questions}
+							\chapter*{\centering Hemoglobin Estimation}
+							\begin{tabular}{p{5in} p{1in}}
+								\textbf{Exp No:}  & \textbf{Date:}\\
+							\end{tabular}
 
-					\chapter*{\centering Specific Gravity}
+							\section*{Aim}
 
-					\begin{tabular}{p{5in} p{1in}}
-						\textbf{Exp No:}  & \textbf{Date:}\\
-					\end{tabular}
+							\addfig{%
+								\begin{figure}[h]
+									\centering
+									\includegraphics[scale=.25]{./hb.jpg}
+									\label{hb}
+									\caption*{\textbf{Sahli's Hemoglobinometer}}
+								\end{figure}
+								}
+								To estimate the hemoglobin content of the blood by Sahli’s acid hematin method.
+								\section*{Apparatus Required}
+								Sahli’s Hemoglobinometer, Hemoglobin pipette, $\frac{N}{10}$ HCl, Distilled water, Glass stirrer, Dropper, Lancet, Spirit and Cotton.
+								\section*{Principle}
+								The amount of hemoglobin in the blood can be estimated by converting a known volume of blood into acid hematin solution and matching the color of the acid hematin solution with that of the standard colour.
+								\section*{Description Of The Apparatus}
+								The hemoglobinometer is a rectangular cubic box consisting of a central compartment to accommodate the ‘Hemoglobin tube’ and two yellow brown coloured cylindrical rods on either side as comparators. The Hb tube is graduated in percentage on one side and in gram percentage on the other side.
 
-					\section*{Aim}
+								The hemoglobin pipette has a single mark on the stem which corresponds to 0.02 ml or 20 cubic mm. A glass stirrer is provided for thorough mixing while diluting acid hematin solution.
+								\section*{Procedure}
+								\begin{enumerate}
+									\item{Fill the hemoglobin tube with $\frac{N}{10}$ HCl upto its lowest mark (2 $g$\%).}
+									\item{Prick the finger under aseptic precautions to form an adequate drop of blood and suck blood into the hemoglobin pipette upto 20 $mm^{3}$mark.}
+									\item{Gently wipe exterior of the tip of the pipette.}
+									\item{Insert the pipette into the hemoglobin tube containing $\frac{N}{10}$ HCl and blow out the blood. Rinse the pipette 2 or 3 times with the acid present in the tube.}
+									\item{Wait for 10 minutes for the formation of acid hematin.}
+									\item{Then, dilute the acid hematin by adding distilled water drop by drop and mix with the stirrer.}
+									\item{Continue dilution till its color matches with that of the standards on either side.}
+									\item{While matching, always take care to raise the stirrer above the level of the solution. Never take the stirrer out of the tube.}
+									\item{Note down the final reading. (Lower meniscus).}
+								\end{enumerate}
+								\section*{Result}
+								The Hb content of the given sample of blood is $\rule{5cm}{0.1cm}$ $g$\%
+								\section*{Questions}
+								\begin{enumerate}
+									\item{What are the other methods used to estimate Hb content of blood?}
+									\item{Which is the most reliable method for estimation of Hb?}
+									\item{What are the different types of normal Hb in adults?}
+									\item{Mention the names of abnormal hemoglobin.}
+									\item{What are the differences between adult Hb \& fetal Hb?}
+									\item{What are the different RBC indices? What are their clinical significance?}
+								\end{enumerate}
+
+								\chapter*{\centering Blood Grouping \& Typing}
+								\begin{tabular}{p{5in} p{1in}}
+									\textbf{Exp No:}  & \textbf{Date:}\\
+								\end{tabular}
+
+								\section*{Aim}
+
+								\addfig{%
+									\begin{figure}[h]
+										\centering
+										\includegraphics[scale=1.2]{./bloodGrouping.jpg}
+										\label{bloodGrouping}
+										\caption*{\textbf{Blood Groups Showing Agglutination}}
+									\end{figure}
+									}
+									To determine uhe ABO blood group and Rh type of the given blood sample.
+									\section*{Apparatus Required}
+									Lancet, spirit, cotton, normal saline, clean white porcelain tile, glass marking pencil, anti-A serum, anti-B serum, anti-D serum, small sticks for mixing, glass slides, microscope.
+									\section*{Principle}
+									Determination of blood group is done by using specific agglutinins (antibodies), to confirm the presence or absence of corresponding agglutinogen (antigens) on the surface of the red blood cells.
+									\section*{Procedure}
+									\begin{enumerate}
+										\item{Divide the porcelain tile into four columns with a marking pencil.}
+										\item{Mark the columns as A, B, Rh and Control}
+										\item{Take1ml of normal saline in a test tube.}
+										\item{Prick the finger with the lancet under aseptic conditions.}
+										\item{Mix 3-5 drops of blood with the saline to obtain a suspension of red blood cells.}
+										\item{Add a drop each of anti-A, anti-B, anti-D sera and saline to the respective columns.}
+										\item{Place a drop of the red cell suspension adjacent to the anti-sera in the respective columns.}
+										\item{Mix the anti-sera and red cell suspension by using separate sticks.}
+										\item{Wait for few minutes and observe the agglutination (clumping).}
+										\item{Compare it with the saline standard.}
+										\item{Record your findings.}
+										\item{If there is doubt regarding agglutination, confirm it under the microscope.}
+									\end{enumerate}
+									\section*{Result}
+									The blood group of the subject is $\rule{5cm}{0.1cm}$
+									\section*{Questions}
+									\begin{enumerate}
+										\item{State Landsteiner’s law.}
+										\item{What is cross-matching of blood?}
+										\item{What is the preservative used to store blood in the blood bank?}
+										\item{What are the clinical applications of blood grouping and Rh typing?}
+										\item{What are the minor blood groups?}
+										\item{What is the concept of universal donor/ universal recipient?}
+										\item{What are the indications and hazards of blood transfusion?}
+										\item{What are the differences between ABO system and Rh system?}
+									\end{enumerate}
+
+									\chapter*{\centering Estimation Of Bleeding Time}
+									\begin{tabular}{p{5in} p{1in}}
+										\textbf{Exp No:}  & \textbf{Date:}\\
+									\end{tabular}
+\addfig{%
+									\begin{figure}[h]
+										\centering
+										\includegraphics[scale=.5]{./bleedingTime.jpg}
+										\label{bleedingTime}
+										\caption*{\textbf{Estimation Of Bleeding Time}}
+									\end{figure}
+									}
+
+									\section*{Aim}
+									To determine the bleeding time by Duke’s method
+									\section*{Apparatus Required}
+									Filter paper, lancet, spirit, cotton swabs \& stop watch.	
+									\section*{Principle}
+									The time interval between skin puncture and spontaneous, unassisted stoppage of bleeding is called bleeding time. It is a test for assessing the function of platelets and integrity of capillaries.
+									\section*{Procedure}
+									\begin{enumerate}
+										\item{Clean the tip of the finger with spirit and cotton and allow the finger to dry.}
+										\item{Make a good deep finger prick with the lancet to get free flowing blood.}
+										\item{Do not squeeze the finger.}
+										\item{Immediately start the stopwatch.}
+										\item{Gently touch the puncture site with a clean filter paper every 15 seconds.}
+										\item{Repeat this step until no further blood spot appears on the filter paper.}
+										\item{Observe that successive spots are smaller in size.}
+										\item{Count the number of blood spots including the dry spot on the filter paper and divide it by 2 to get the bleeding time in minutes.}
+										\item{Normal bleeding time by Duke’s method is 2-5minutes.}
+									\end{enumerate}
+									\section*{Result}
+									The bleeding time determined by Duke’s method is $\rule{5cm}{0.1cm}$
+									\section*{Questions}
+									\begin{enumerate}
+								\item{Define bleeding time.}
+								\item{What are the other methods to determine the bleeding time?}
+								\item{What is hemostasis?}
+								\item{What is the role of platelets in hemostasis?}
+								\item{What is the normal platelet count? What do you mean by thrombocytosis?}
+								\item{Name few conditions where bleeding time is prolonged?}
+								\item{What is Thrombocytopenic purpura? Comment on the clotting time in this condition.}
+							\end{enumerate}
+
+							\chapter*{\centering Estimation Of Erythrocyte Sedimentation Rate}
+							\begin{tabular}{p{5in} p{1in}}
+								\textbf{Exp No:}  & \textbf{Date:}\\
+							\end{tabular}
+							\section*{Aim}
+							\section*{Apparatus Required}
+							\section*{Turk's Fluid Composition}
+							\section*{Procedure}
+							\section*{Calcualtion}
+							\section*{Result}
+							\section*{Questions}
 
 
-					\section*{Apparatus Required}
-					\section*{Turk's Fluid Composition}
-					\section*{Procedure}
-					\section*{Calcualtion}
-					\section*{Result}
-					\section*{Questions}
+							\chapter*{\centering Packed Cell Volume}
+							\begin{tabular}{p{5in} p{1in}}
+								\textbf{Exp No:}  & \textbf{Date:}\\
+							\end{tabular}
+							\section*{Aim}
+							\section*{Apparatus Required}
+							\section*{Turk's Fluid Composition}
+							\section*{Procedure}
+							\section*{Calcualtion}
+							\section*{Result}
+							\section*{Questions}
 
 
-					\part{Clinical Physiology}
+							\chapter*{\centering Osmotic Fragility}
+							\begin{tabular}{p{5in} p{1in}}
+								\textbf{Exp No:}  & \textbf{Date:}\\
+							\end{tabular}
+
+							\section*{Aim}
+							\section*{Apparatus Required}
+							\section*{Turk's Fluid Composition}
+							\section*{Procedure}
+							\section*{Calcualtion}
+							\section*{Result}
+							\section*{Questions}
+
+							\chapter*{\centering Specific Gravity}
+
+							\begin{tabular}{p{5in} p{1in}}
+								\textbf{Exp No:}  & \textbf{Date:}\\
+							\end{tabular}
+
+							\section*{Aim}
 
 
-				\end{document}
+							\section*{Apparatus Required}
+							\section*{Turk's Fluid Composition}
+							\section*{Procedure}
+							\section*{Calcualtion}
+							\section*{Result}
+							\section*{Questions}
+
+
+							\part{Clinical Physiology}
+
+
+						\end{document}
